# pySigma-backend-crowdstrikelogscale

./: README.md  pyproject.toml
.github/workflows/: test.yml
sigma/backends/logscale/: __init__.py  logscale.py
sigma/pipelines/falcon/: __init__.py  falcon.py
tests/: test_backend_logscale.py  test_pipelines_logscale.py
