[tool.poetry]
name = "pySigma-backend-crowdstrikelogscale"
version = "0.1.0"
description = "pySigma CrowdStrike LogScale backend"
authors = ["Panos Moullotou <pmoullotou@gmail.com>"]
license = "LGPL-3.0-only"
repository = "https://github.com/moullos/pySigma-backend-crowdstrikelogscale"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.11.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
